# RPCSimulation

./: .gitignore  CMakeLists.txt  GNUmakefile.txt  README.md  RPCSimulation.cc  run.mac  tests.mac  vis.mac
include/: ActionInitialization.hh  DataHandler.hh  DataHandlerMessenger.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  DetectorMessenger.hh  ElectricFieldSetup.hh  EventAction.hh  EventActionMessenger.hh  HistoManager.hh  HistoMessenger.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  ProcessesCount.hh  RunAction.hh  SensitiveDetector.hh  StepMax.hh  StepMaxMessenger.hh  SteppingAction.hh
post-simulations/: analisis.ipynb  create_histograms.cpp  energy.cpp  pass_analysis.cpp  stylize.ipynb  visualizate.cpp
post-simulations/.ipynb_checkpoints/: analisis-checkpoint.ipynb  stylize-checkpoint.ipynb
post-simulations/src/: CreateHistogram.hh  HistogramControl.hh  MinMax.hh
src/: ActionInitialization.cc  DataHandler.cc  DataHandlerMessenger.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  DetectorMessenger.cc  ElectricFieldSetup.cc  EventAction.cc  EventActionMessenger.cc  HistoManager.cc  HistoMessenger.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  StepMax.cc  StepMaxMessenger.cc  SteppingAction.cc
